--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cordova Screen Orientation plugin",
   "repository": {
     "type": "git",
-    "url": "https://github.com/apache/cordova-plugin-screen-orientation"
+    "url": "git+https://github.com/elastos/Elastos.Trinity.Plugins.ScreenOrientation.git"
   },
   "bugs": {
     "url": "https://issues.apache.org/jira/browse/CB"
@@ -14,7 +14,7 @@
     "jshint": "node node_modules/jshint/bin/jshint www && node node_modules/jshint/bin/jshint src && node node_modules/jshint/bin/jshint demo/www"
   },
   "cordova": {
-    "id": "cordova-plugin-screen-orientation",
+    "id": "elastos-trinity-plugins-screen-orientation",
     "platforms": [
       "android",
       "ios",
